脚本调用ClassLoader单元测试.